--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,3 +47,8 @@ en:
   text_feauture_think_easer_others: 'And much more...'
   error_text_wrong_email: ' address format wrong'
   text_feedback_have_been_send: 'Message have been send'
+  button_close: 'Close'
+  text_authorization: 'Authorization'
+  label_password_confirmation: 'Регистрация'
+  label_sign_up_header: 'Sign Up'
+  text_email_is_used: 'This Emil is used.'
